<resources>
    <string name="oneplus_contorl_font_family_display4">Slate-light</string>
    <string name="oneplus_contorl_font_family_display3">Slate-regular</string>
    <string name="oneplus_contorl_font_family_display2">Slate-regular</string>
    <string name="oneplus_contorl_font_family_display1">Slate-regular</string>
    <string name="oneplus_contorl_font_family_headline">Slate-regular</string>
    <string name="oneplus_contorl_font_family_title">Slate-regular</string>
    <string name="oneplus_contorl_font_family_title_extended">Slate-regular</string>
    <string name="oneplus_contorl_font_family_subheading">Slate-book</string>
    <string name="oneplus_contorl_font_family_subtitle">Slate-medium</string>
    <string name="oneplus_contorl_font_family_body2">Slate-medium</string>
    <string name="oneplus_contorl_font_family_body1">Slate-book</string>
    <string name="oneplus_contorl_font_family_button">Slate-medium</string>
    <string name="oneplus_contorl_font_family_descriptions">Slate-regular</string>
    <string name="delete">Delete</string>
    <string name="adv_settings">Settings</string>
    <string name="adv_settings_bokeh">Portrait</string>
    <string name="adv_settings_bokeh_original">Save normal photo</string>
    <string name="adv_settings_bokeh_original_description">Save both photos with and without depth of field enhancement effects.</string>
    <string name="adv_settings_front_camera_mirror">Invert photo</string>
    <string name="adv_settings_grid">Grid</string>
    <string name="adv_settings_grid_golden_ratio">Golden ratio</string>
    <string name="adv_settings_grid_none">None</string>
    <string name="adv_settings_location">Store location data</string>
    <string name="adv_settings_photo_resolution">Photo resolution</string>
    <string name="adv_settings_photo_resolution_format" formatted="false">%dMP %s</string>
    <string name="adv_settings_quick_capture">Quick capture</string>
    <string name="adv_settings_quick_capture_description">Double-tap the power button to instantly take a photo</string>
    <string name="adv_settings_save_raw_image">Save RAW image</string>
    <string name="adv_settings_shutter_sound">Shutter sound</string>
    <string name="adv_settings_simple_ui_mode">Immersive mode</string>
    <string name="adv_settings_simple_ui_mode_description">Swipe to enter or exit Immersive Mode.</string>
    <string name="adv_settings_smile_capture">Smile Capture</string>
    <string name="adv_settings_video_resolution">Video resolution</string>
    <string name="adv_settings_video_frame_rate">High Video Frame Rate</string>
    <string name="adv_settings_storage">Save to SD card</string>
    <string name="adv_settings_about">About</string>
    <string name="adv_settings_other">Other</string>
    <string name="adv_settings_picture_information">Picture information</string>
    <string name="adv_settings_horizontal_reference_line">Horizontal reference line</string>
    <string name="adv_settings_histogram">Histogram</string>
    <string name="adv_settings_watermark_menu_title">Shot on OnePlus Watermark</string>
    <string name="adv_settings_watermark_menu_description">Watermark will be applied to photos taken by rear Camera, Portrait and Pro Mode</string>
    <string name="adv_settings_watermark">Watermark</string>
    <string name="adv_settings_watermark_slogan_name">Name</string>
    <string name="adv_settings_watermark_slogan_name_edit">Your name</string>
    <string name="adv_settings_watermark_slogan_name_empty_dialog">No text input, unable to save name in watermark.</string>
    <string name="adv_settings_general_settings">General</string>
    <string name="app_name">Camera</string>
    <string name="app_video_name">Camcorder</string>
    <string name="app_business_card_name">Business Card Camera</string>
    <string name="bokeh_hint">Depth effect</string>
    <string name="bokeh_hint_camera_is_covered">Lens is covered</string>
    <string name="bokeh_hint_low_light">More light required</string>
    <string name="bokeh_hint_no_depth_effect">No depth effect</string>
    <string name="bokeh_hint_no_subject">No subject found</string>
    <string name="bokeh_hint_object_distance_too_close">Move farther away</string>
    <string name="bokeh_hint_object_distance_too_far">Move closer</string>
    <string name="bokeh_hint_place_object_in_distance">Place the subject between 0.3 and 2 meters</string>
    <string name="burst_viewer_best_shot">Best</string>
    <string name="burst_viewer_default_title">Select photo</string>
    <string name="burst_viewer_delete_media_title">Delete photo</string>
    <string name="burst_viewer_delete_media_title_multiple">Delete photos</string>
    <string name="burst_viewer_delete_media_message">1 Photo will be deleted from device permanently.</string>
    <string name="burst_viewer_delete_media_message_multiple">%d Photos will be deleted from device permanently.</string>
    <string name="burst_viewer_save">SAVE</string>
    <string name="burst_viewer_save_media_title">Keep photo</string>
    <string name="burst_viewer_save_media_title_multiple">Keep photos</string>
    <string name="burst_viewer_save_media_message">Keep 1 photo and delete others from device permanently?</string>
    <string name="burst_viewer_save_media_message_multiple">Keep %d photos and delete others from device permanently?</string>
    <string name="camera_gallery_burst_indicator">Burst (%d photos)</string>
    <string name="camera_gallery_empty_page_text">No photos or videos</string>
    <string name="capture_mode_bokeh">Portrait</string>
    <string name="capture_mode_manual">Pro Mode</string>
    <string name="capture_mode_panorama">Panorama</string>
    <string name="capture_mode_photo">Photo</string>
    <string name="capture_mode_slow_motion">Slow motion</string>
    <string name="capture_mode_timelapse">Time-lapse</string>
    <string name="capture_mode_video">Video</string>
    <string name="capture_mode_selfie">Selfie</string>
    <string name="flash_disabled_calling">Flash disabled due to phone call</string>
    <string name="flash_disabled_high_device_temperature">Flash disabled due to high temperature</string>
    <string name="flash_disabled_low_battery_level">Flash disabled due to low battery</string>
    <string name="flash_disabled_low_battery_temperature">Flash disabled due to low battery temperature</string>
    <string name="flash_disabled_using_wifi_hotspot">Flash disabled due to WIFI hot-spot</string>
    <string name="flash_disabled_using_scene">Flash disabled by %s</string>
    <string name="focus_exposure_locked">AE/AF locked</string>
    <string name="focus_exposure_drag_icon">Exposure compensation</string>
    <string name="focus_indicator_point">Focal point</string>
    <string name="exposure_indicator_point">Exposure point</string>
    <string name="h2_permissions_description">Need to get the following permissions to use Camera</string>
    <string name="h2_permissions_description_location">"Access device's location"</string>
    <string name="h2_permissions_description_mobile_network">Access internet via 2G/3G/4G network</string>
    <string name="h2_permissions_description_phone_state">Access phone state</string>
    <string name="h2_permissions_description_wifi">Access internet via WIFI network</string>
    <string name="h2_permissions_title">Request permissions</string>
    <string name="panorama_message_big_vertical_displacement">Capture stopped because of large vertical displacement.</string>
    <string name="panorama_message_how_to_start">Press capture button and move the device</string>
    <string name="panorama_message_internal_error">Capture stopped due to error</string>
    <string name="panorama_message_move">Move the device</string>
    <string name="panorama_message_move_down">Move down</string>
    <string name="panorama_message_move_slower">Move slower</string>
    <string name="panorama_message_move_too_fast">Moving too fast, capture stopped</string>
    <string name="panorama_message_move_up">Move up</string>
    <string name="panorama_message_stitching">Stitching</string>
    <string name="panorama_message_wrong_direction">Moving backward, capture stopped</string>
    <string name="processing_dialog_default_message">Processing…</string>
    <string name="processing_dialog_saving_message">Saving…</string>
    <string name="resolution_video_1080p">Full HD</string>
    <string name="resolution_video_2160p">UHD</string>
    <string name="resolution_video_720p">HD</string>
    <string name="scene_auto_hdr">Auto HDR</string>
    <string name="scene_clear_shot">Clear image</string>
    <string name="scene_hdr">HDR</string>
    <string name="scene_face_beauty_photo">Beauty</string>
    <string name="scene_enable">%s is ON</string>
    <string name="time_hour">%d hour</string>
    <string name="time_hours">%d hours</string>
    <string name="time_minute">%d minute</string>
    <string name="time_minutes">%d minutes</string>
    <string name="time_second">%d second</string>
    <string name="time_seconds">%d seconds</string>
    <string name="video_message_max_duration" formatted="false">%s video is limited to %s in length</string>
    <string name="video_message_max_file_size_reached">Maximum video file size reached</string>
    <string name="video_message_unknown_error">Recording stopped due to error</string>
    <string name="video_message_error_audio_occupied">Recording channel is occupied</string>
    <string name="error_camera_device">Camera device error</string>
    <string name="error_camera_disabled">Camera is disabled</string>
    <string name="error_camera_disconnected">Camera is disconnected</string>
    <string name="error_camera_in_use">"Can't connect to the camera"</string>
    <string name="error_camera_service">Camera service error</string>
    <string name="error_camera_unkown">Unknown error</string>
    <string name="error_max_cameras_in_use">Max camera in use</string>
    <string name="error_disk_full">Low memory, adjust picture resolution or delete some files</string>
    <string name="error_file_saving">Saving file may take a moment.</string>
    <string name="error_multi_screen_not_supported">Camera does not support split screen.</string>
    <string name="about_version">Current version V%1$s</string>
    <string name="about_agreement">User Agreement</string>
    <string name="about_copyright">"OnePlus All Rights reserved
@2017 OnePlus inc."</string>
    <string name="capture_bar_capture">Capture</string>
    <string name="capture_bar_timer">Timer</string>
    <string name="capture_bar_flash">Flash</string>
    <string name="capture_bar_scene">Scene</string>
    <string name="capture_bar_more">More options</string>
    <string name="capture_bar_switch">Switch camera</string>
    <string name="capture_bar_snapshot">Snapshot</string>
    <string name="manual_mode_auto">Auto</string>
    <string name="manual_mode_manual">Manual</string>
    <string name="manual_mode_awb_incandescent">Incandescent</string>
    <string name="camera_wizard_simple_modes_switch_ok">GOT IT</string>
    <string name="shortcut_video">Take a video</string>
    <string name="tutorial_front_cam_face_beauty">Use our Beauty Mode and adjust the enhancement effects to your liking.</string>
    <string name="tutorial_front_cam_face_description">Want to capture a better selfie?</string>
    <string name="tutorial_front_cam_front_flash">Use flashlight from the front to keep selfie bright.</string>
    <string name="tutorial_front_cam_smile_capture">Smile Capture allows taking hands free selfies using just your smile!</string>
    <string name="shortcut_selfie">@string/capture_mode_selfie</string>
    <string name="shortcut_selfie_short">@string/capture_mode_selfie</string>
    <string name="shortcut_video_short">@string/capture_mode_video</string>
    <string name="shortcut_pro">@string/capture_mode_manual</string>
    <string name="shortcut_pro_short">@string/capture_mode_manual</string>
</resources>