<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:minHeight="24.0dip" android:text="@string/h2_permissions_description" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#de000000" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:text="@string/h2_permissions_description_location" />
        <TextView android:textSize="16.0sp" android:textColor="#de000000" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:text="@string/h2_permissions_description_mobile_network" />
        <TextView android:textSize="16.0sp" android:textColor="#de000000" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:text="@string/h2_permissions_description_wifi" />
        <TextView android:textSize="16.0sp" android:textColor="#de000000" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:text="@string/h2_permissions_description_phone_state" />
    </LinearLayout>
</LinearLayout>