<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/capture_bar" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.oneplus.camera.widget.RotateRelativeLayout android:id="@id/capture_bar_action_icon_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_marginBottom="@dimen/capture_modes_panel_button_margin_bottom">
        <LinearLayout android:orientation="horizontal" android:id="@id/action_button_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
    </com.oneplus.camera.widget.RotateRelativeLayout>
    <RelativeLayout android:id="@id/capture_bar_bottom_container" android:background="@color/capture_bar_background" android:layout_width="fill_parent" android:layout_height="@dimen/capture_bar_height" android:layout_alignParentBottom="true">
        <ImageButton android:id="@id/primary_capture_button" android:background="@null" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="@dimen/capture_bar_primary_button_width" android:layout_height="@dimen/capture_bar_primary_button_height" android:layout_marginBottom="@dimen/capture_bar_primary_button_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/capture_bar_capture" />
        <ImageButton android:id="@id/secondary_capture_button" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/capture_button_video_snapshot" android:layout_centerVertical="true" android:contentDescription="@string/capture_bar_snapshot" android:layout_marginStart="@dimen/capture_bar_secondary_button_margin_left" android:layout_toEndOf="@id/primary_capture_button" />
        <ImageButton android:id="@id/more_button" android:background="@null" android:layout_width="@dimen/capture_bar_icon_width" android:layout_height="@dimen/capture_bar_icon_height" android:layout_centerVertical="true" android:contentDescription="@string/capture_bar_more" android:layout_marginEnd="@dimen/capture_bar_secondary_button_margin_left" android:layout_toStartOf="@id/primary_capture_button" />
        <ImageButton android:id="@id/switch_camera_button" android:background="@null" android:layout_width="@dimen/capture_bar_icon_width" android:layout_height="@dimen/capture_bar_icon_height" android:layout_centerVertical="true" android:contentDescription="@string/capture_bar_switch" android:layout_marginStart="@dimen/capture_bar_secondary_button_margin_left" android:layout_toEndOf="@id/primary_capture_button" />
        <TextView android:gravity="center" android:id="@id/count_down_timer_text_hint" android:visibility="gone" android:layout_width="@dimen/capture_bar_primary_button_width" android:layout_height="@dimen/capture_bar_primary_button_height" android:layout_marginBottom="@dimen/capture_bar_primary_button_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/CountDownTimerTextHint" />
    </RelativeLayout>
</RelativeLayout>