<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/tutorial_touch_receiver" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:id="@id/tutorial_front_cam_container" android:layout_width="fill_parent" android:layout_height="@dimen/tutorial_front_cam_icon_layout_height">
        <View android:id="@id/tutorial_inner_touch_receiver" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <View android:id="@id/tutorial_front_cam_second_layer" android:layout_width="fill_parent" android:layout_height="@dimen/second_layer_bar_height" />
        <TextView android:gravity="center_vertical" android:id="@id/tutorial_front_cam_description" android:layout_width="fill_parent" android:layout_height="@dimen/common_control_list_item_height_one_line1" android:layout_marginTop="@dimen/common_control_margin_top1" android:text="@string/tutorial_front_cam_face_description" android:layout_below="@id/tutorial_front_cam_second_layer" android:layout_marginStart="@dimen/common_control_margin_left2" android:layout_marginEnd="@dimen/common_control_margin_right2" style="@style/TutorialText" />
        <RelativeLayout android:id="@id/tutorial_front_cam_face_beauty_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tutorial_front_cam_description">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/tutorial_front_cam_face_beauty" android:layout_width="@dimen/tutorial_front_cam_icon_width_height" android:layout_height="@dimen/tutorial_front_cam_icon_width_height" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_marginStart="@dimen/common_control_margin_left2" />
            <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/common_control_list_item_height_two_line1" android:text="@string/tutorial_front_cam_face_beauty" android:maxLines="2" android:layout_marginStart="@dimen/common_control_margin_left4" android:layout_marginEnd="@dimen/common_control_margin_right2" style="@style/TutorialText" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/tutorial_front_cam_smile_capture_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tutorial_front_cam_face_beauty_layout">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/tutorial_front_cam_smile_capture" android:layout_width="@dimen/tutorial_front_cam_icon_width_height" android:layout_height="@dimen/tutorial_front_cam_icon_width_height" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_marginStart="@dimen/common_control_margin_left2" />
            <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/common_control_list_item_height_two_line1" android:text="@string/tutorial_front_cam_smile_capture" android:maxLines="2" android:layout_marginStart="@dimen/common_control_margin_left4" android:layout_marginEnd="@dimen/common_control_margin_right2" style="@style/TutorialText" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/tutorial_front_cam_flash_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tutorial_front_cam_smile_capture_layout">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/tutorial_front_cam_flash" android:layout_width="@dimen/tutorial_front_cam_icon_width_height" android:layout_height="@dimen/tutorial_front_cam_icon_width_height" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_marginStart="@dimen/common_control_margin_left2" />
            <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/common_control_list_item_height_two_line1" android:text="@string/tutorial_front_cam_front_flash" android:maxLines="2" android:layout_marginStart="@dimen/common_control_margin_left4" android:layout_marginEnd="@dimen/common_control_margin_right2" style="@style/TutorialText" />
        </RelativeLayout>
        <TextView android:gravity="center" android:id="@id/tutorial_confirm_text" android:background="?android:selectableItemBackground" android:layout_width="@dimen/tutorial_confirm_text_width" android:layout_height="@dimen/tutorial_confirm_text_height" android:layout_marginBottom="@dimen/tutorial_confirm_text_margin_end_bottom" android:text="@string/camera_wizard_simple_modes_switch_ok" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/tutorial_confirm_text_margin_end_bottom" android:layout_alignParentEnd="true" style="@style/TutorialTextConfirm" />
    </RelativeLayout>
</RelativeLayout>